# lox-cpp

./: .gitmodules  CMakeLists.txt  lox-cpp.natvis
examples/: class1.lox  class2.lox  class3.lox  class4.lox  class5.lox  class6.lox  closure2.lox  closure3.lox  closure5.lox  closure_complex.lox  closure_simple.lox  fibonacci.lox  fibonacci.py  test.lox
src/: main.cpp
src/core/: array.h  file.cpp  file.h  log.cpp  log.h  map.h  span.h  unique_ptr.h  vector.h
src/vm/: array.cpp  array.h  chunk.cpp  chunk.h  closure.cpp  closure.h  compiler.cpp  compiler.h  format.cpp  format.h  function.cpp  function.h  native_fun.cpp  native_fun.h  object.cpp  object.h  opcode.cpp  opcode.h  parser.h  scanner.h  string.cpp  string.h  string_interner.cpp  string_interner.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
